initial version of handwriting

--- a/NeuroKinetic/ViewController/Base.lproj/Main.storyboard
+++ b/NeuroKinetic/ViewController/Base.lproj/Main.storyboard
@@ -574,8 +574,8 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="GH1-F3-uPf"/>
-        <segue reference="U1s-Ul-uJJ"/>
+        <segue reference="ERi-x1-JKb"/>
+        <segue reference="zMP-Jw-foI"/>
         <segue reference="MlM-9w-c64"/>
         <segue reference="vnR-XQ-OKg"/>
     </inferredMetricsTieBreakers>
